使用 client 编译器优化启动速度，删除注释代码。